--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Akash & family-Invitation</title>
+    <title>Real Time App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="Biradar-family-wedding"></div>
+    <div id="Real Time App"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
